# grafeo

./: .dir_locals.el  .flake8  .mypy.ini  .pydocstyle  README.md  poetry_scripts.py  pyproject.toml
docs/source/: conf.py  index.rst  models.rst  pens.rst
gpgl/: inkcut-1677023683.gpgl  inkcut-1677026044.gpgl  sq-inkcut-1677037622.gpgl
grafeo/: main.py
grafeo/config/: ConfigManager.py  default_pens.json  printers.json
grafeo/fonts/: FontFamily.py  FontManager.py  SvgFont.py
grafeo/generators/: Generator.py  GeneratorManager.py
grafeo/generators/impl/: CubeLines.py  Disarray.py  Explosion.py  FontTest.py  HatchingTest.py  NoiseLineGenerator.py  VolumeTest.py
grafeo/generators/impl/assets/: lorem.txt
grafeo/gpgl/: GpglGenerator.py
grafeo/gui/: Gui.py  Modes.py  Tags.py
grafeo/models/: BoundingBox.py  Model.py
grafeo/models/atoms/: Atom.py  __init__.py
grafeo/models/derived/: Box.py  MultiPolygon.py  Polygon.py
grafeo/models/derived/mixins/: Hatchable.py
grafeo/pens/: Pen.py
grafeo/printers/: GpglPrinter.py  Printer.py  SerialPrinter.py  __init__.py
grafeo/serializers/: SerialSerializer.py  Serializer.py  __init__.py
grafeo/svg/: Barcode.py  Svg.py  SvgManager.py
grafeo/utils/: deep_merge.py  hatch.py  splines.py
grafeo/volumes/: Volume.py
plotter/: LineGenerator.py  Repl.py  Sketch.py  chaikin.py  config.json  config.py  gpgl.py  main.py  main2.py  ser.py  test.py  tracemalloc.py
plotter/config/: ConfigManager.py
plotter/fonts/: FontCharacter.py  FontFamily.py  FontManager.py  SvgFont.py
plotter/generators/: Generator.py  GeneratorManager.py  Line.py  Parameters.py  __init__.py
plotter/generators/impl/: CubeLines.py  Disarray.py  Explosion.py  FontTest.py  HatchingTest.py  NoiseLineGenerator.py  Test.py  VolumeTest.py  __init__.py
plotter/gui/: Gui.py  Tags.py  gui.py
plotter/models/: Bounded.py  BoundingBox.py  Model.py  __init__.py
plotter/models/atoms/: Atom.py  Line.py  Point.py  __init__.py
plotter/models/derived/: Box.py  MultiPolygon.py  Polygon.py
plotter/models/derived/mixins/: Hatchable.py
plotter/pens/: Pen.py  __init__.py
plotter/printers/: SerialPrinter.py
plotter/renderer/: Renderer.py  __init__.py
plotter/svg/: Svg.py  SvgManager.py
plotter/utils/: debounce.py  hatch.py  intersection.py  scaling.py  splines.py  test.py
plotter/volumes/: Volume.py
scripts/: reconstruct2.py  reconstruct_minimal.py
scripts/assets/composite_images/: 10292024161904.tif  10292024161904_001.tif  10292024161905.tif
scripts/assets/single_images/: 1.tif  2.tif  3.tif  4.tif  5.tif  6.tif  7.tif  8.tif  9.tif
