[tool.poetry]
name = "plotter"
version = "0.1.0"
description = ""
authors = ["Joseph Bergeron <jophish126@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
py5 = "^0.8.3a1"
pyserial = "^3.5"
numpy = "^2.0.0"
scipy = "^1.10.1"
matplotlib = "^3.7.0"
shapely = "^2.0.1"
more-itertools = "^9.0.0"
dearpygui = "^1.9.0"
opencv-python = "^4.7.0.72"
pycairo = "1.22"
python-language-server = "^0.36.2"
fonttools = "^4.54.1"
bs4 = "^0.0.2"
lxml = "^5.3.0"
bezier = "^2024.6.20"
svg-path = "^6.3"


[tool.poetry.group.dev.dependencies]
pyls-isort = "^0.2.2"
isort = "^5.12.0"
mypy = "^1.0.1"
python-lsp-server = {extras = ["all"], version = "^1.12.0"}
flake8 = "^7.1.0"
future = "^0.18.3"
pylsp-mypy = "^0.6.6"
python-lsp-black = "^1.2.1"
sphinx = "^6.1.3"
sphinx-autodoc-typehints = "^1.22"
scalene = "^1.5.13"

[tool.poetry.scripts]
plotter = "poetry_scripts:plotter"
test = "poetry_scripts:test"
format = "poetry_scripts:format_fix"
format-check = "poetry_scripts:format_check"
lint = "poetry_scripts:lint"
type-check = "poetry_scripts:type_check"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylsp-mypy]
enabled = true
live_mode = true